fix: center footer on mobile, fixed bebas font on safari

--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -39,7 +39,7 @@
 @font-face {
   font-family: 'Bebas Neue';
   src: url('/fonts/BebasNeue.woff2') format('woff2');
-  font-weight: 400;
+  font-weight: 100 900;
   font-display: swap;
 }
 
